# ragora-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: chat.py  collections_crud.py  credits.py  documents.py  error_handling.py  listings.py  search.py  streaming.py
examples/agentic_rag/: __init__.py  agent.py  chat.py  config.py  state.py  tools.py
ragora/: __init__.py  client.py  models.py  smoke.py
tests/: test_errors.py  test_models.py  test_payload.py  test_sse_parsing.py  test_upload.py
